# ichor

./: .bazelrc.local  BUILD.bazel  Ichor.hs  WORKSPACE  buildshell.nix  ichor.cabal  nixpkgs.nix  shell.nix  stack.yaml
.github/workflows/: ci.yaml
executable/: Main.hs
