exports_files(["nixpkgs.nix"])

load(
    "@rules_haskell//haskell:defs.bzl",
    "ghc_plugin",
    "haskell_binary",
)

haskell_binary(
    name = "ichor",
    srcs = glob(['executable/*.hs',
                 'library/*.hs'
		 ]),
    deps = [
        "@stackage//:Cabal",
        "@stackage//:base",
        "@stackage//:bytestring",
        "@stackage//:directory",
        "@stackage//:filepath",
        "@stackage//:ghc",
        "@stackage//:mtl",
        "@stackage//:process",
        "@stackage//:template-haskell",
        "@stackage//:temporary",
        "@stackage//:text",
    ],
)
